--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <script>
     async function main() {
-      await liff.init({ liffId: "你建立的LIFF ID" });
+      await liff.init({ liffId: "2008011166-jMPJAmkq" });
       if (!liff.isLoggedIn()) {
         liff.login();
       }
